--- a/DeepKeyGen.ipynb
+++ b/DeepKeyGen.ipynb
@@ -82,19 +82,22 @@
         "    model.add(layers.Reshape((32, 32, 256)))\n",
         "    assert model.output_shape == (None, 32, 32, 256)\n",
         "\n",
-        "    model.add(layers.Conv2DTranspose(128, (5, 5), strides=(1, 1), padding='same', use_bias=False))\n",
+        "    model.add(layers.Conv2D(128, (5, 5), strides=(7, 7), padding='same', use_bias=False))\n",
         "    assert model.output_shape == (None, 32, 32, 128)\n",
         "    model.add(layers.BatchNormalization())\n",
         "    model.add(layers.LeakyReLU())\n",
         "\n",
-        "    model.add(layers.Conv2DTranspose(64, (5, 5), strides=(2, 2), padding='same', use_bias=False))\n",
+        "    model.add(layers.Conv2D(64, (5, 5), strides=(3, 3), padding='same', use_bias=False))\n",
         "    assert model.output_shape == (None, 64, 64, 64)\n",
         "    model.add(layers.BatchNormalization())\n",
         "    model.add(layers.LeakyReLU())\n",
         "\n",
-        "    model.add(layers.Conv2DTranspose(1, (5, 5), strides=(2, 2), padding='same', use_bias=False, activation='tanh'))\n",
-        "    assert model.output_shape == (None, 128, 128, 1)\n",
+        "    model.add(layers.Conv2DTranspose(64, (5, 5), strides=(3, 3), padding='same', use_bias=False))\n",
+        "    assert model.output_shape == (None, 64, 64, 64)\n",
+        "    model.add(layers.BatchNormalization())\n",
+        "    model.add(layers.LeakyReLU())\n",
         "\n",
+        
         "    return model"
       ]
     },
@@ -108,12 +111,12 @@
       "source": [
         "def make_discriminator_model():\n",
         "    model = tf.keras.Sequential()\n",
-        "    model.add(layers.Conv2D(64, (5, 5), strides=(2, 2), padding='same',\n",
+        "    model.add(layers.Conv2D(64, (5, 5), strides=(4, 4), padding='same',\n",
         "                                     input_shape=[128, 128, 1]))\n",
         "    model.add(layers.LeakyReLU())\n",
         "    model.add(layers.Dropout(0.3))\n",
         "\n",
-        "    model.add(layers.Conv2D(128, (5, 5), strides=(2, 2), padding='same'))\n",
+        "    model.add(layers.Conv2D(128, (5, 5), strides=(4, 4), padding='same'))\n",
         "    model.add(layers.LeakyReLU())\n",
         "    model.add(layers.Dropout(0.3))\n",
         "\n",
